--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "description": "Framework Dframe",
     "type": "library",
     "require": {
+        "php": ">=5.5",
         "smarty/smarty": "^3.1"
     },
     "authors": [
@@ -11,9 +12,6 @@
             "email": "slaszka@gmail.com"
         }
     ],
-    "require": {
-        "php": ">=5.5"
-    },
     
     "minimum-stability": "stable",
     "autoload": {
