--- a/example/composer.json
+++ b/example/composer.json
@@ -1,10 +1,10 @@
 {
     "autoload": {
-        "psr-4": {"": "app/"},
+        "psr-4": {"": "app/"}
     },
     
     "require": {
         "dframe/dframe": "^3.23.3",
         "dframe/database": "^1.1.0"
-    }, 
+    }
 }
