--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
     ],
     "require": {
         "php": ">=5.5",
-        "smarty/smarty": "^3.1"
+        "smarty/smarty": "^3.1",
+        "kriswallsmith/assetic": "^1.4",
+        "ptachoire/cssembed": "^1.0"
     },
     "minimum-stability": "stable",
     "autoload": {
