--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "php": ">=5.6",
         "smarty/smarty": "^3.1",
         "kriswallsmith/assetic": "^1.4",
+        "patchwork/jsqueeze": "^2.0",
         "ptachoire/cssembed": "^1.0"
     },
     "minimum-stability": "stable",
