--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "smarty/smarty": "^3.1",
         "kriswallsmith/assetic": "^1.4",
         "patchwork/jsqueeze": "^2.0",
-        "ptachoire/cssembed": "^1.0"
+        "ptachoire/cssembed": "^1.0",
+        "natxet/CssMin": "^3.0"
     },
     "minimum-stability": "stable",
     "autoload": {
