--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,6 @@
 language: php
 php:
-  - 5.5
-  - 5.6
   - 7.0
-  - 7.1
 
 # We don't want to run linux commands as super user
 sudo: false
@@ -11,5 +8,8 @@ sudo: false
 # Tell Travis CI to monitor only 'master' branch
 branches:
 only: master
+
+install: 
+   composer install
 
 script: phpunit --stderr tests
