--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,7 @@ only: master
 install: 
    composer install
 
-script: phpunit
+script:
+   - phpunit
+   - 'if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then bash ./travis/run_on_pull_requests; fi'
+   - 'if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then bash ./travis/run_on_non_pull_requests; fi'
