--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,11 @@
 {
     "name": "dframe/dframe",
     "description": "Framework Dframe",
-    "keywords": ["framework", "dframe", "mvc"],
+    "keywords": [
+        "framework",
+        "dframe",
+        "mvc"
+    ],
     "homepage": "https://dframeframework.com",
     "type": "library",
     "license": "MIT",
@@ -23,18 +27,20 @@
     },
     "minimum-stability": "stable",
     "autoload": {
-        "psr-4": {"Dframe\\": "src"},
-        "files": ["src/Functions.php"]
+        "psr-4": {
+            "Dframe\\": "src"
+        },
+        "files": [
+            "src/Functions.php"
+        ]
     },
-
     "require-dev": {
         "mikey179/vfsStream": "^1.6"
     },
-
     "scripts": {
         "test": [
             "@phpunit"
         ],
         "phpunit": "php vendor/bin/phpunit"
-    }    
+    }
 }
