--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,14 @@
 language: php
+
+os: 
+- linux
+- windows
+
+env:
+  global:
+    - HTTP_HOST=dframeframework.com
+    - MOD_REWRITE=true
+
 php:
   - 7.0
   - 7.1
