--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         }
     ],
     "require": {
-        "php": ">=7.0"
+        "php": ">=7.0",
+        "psr/simple-cache": "^1.0"
     },
     "suggest": {
         "smarty/smarty": "^3.1",
