--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     ],
     "require": {
         "php": ">=7.0",
+        "ext-json": "*",
         "psr/simple-cache": "^1.0"
     },
     "suggest": {
