Resolved #72, Changed namespace tests

--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Dframe\\tests\\": "tests"
+            "Dframe\\Tests\\": "tests"
         }
     },
     "require-dev": {
