--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,12 @@
     },
     "require-dev": {
         "mikey179/vfsStream": "^1.6",
-        "phpunit/phpunit": "^6.5"
+        "phpunit/phpunit": "^6.5",
+        "smarty/smarty": "^3.1",
+        "kriswallsmith/assetic": "^1.4",
+        "patchwork/jsqueeze": "^2.0",
+        "ptachoire/cssembed": "^1.0",
+        "natxet/CssMin": "^3.0"
     },
     "scripts": {
         "test": [
