--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
         "kriswallsmith/assetic": "^1.4",
         "patchwork/jsqueeze": "^2.0",
         "ptachoire/cssembed": "^1.0",
-        "natxet/CssMin": "^3.0"
+        "natxet/cssmin": "^3.0"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
@@ -45,13 +45,13 @@
         }
     },
     "require-dev": {
-        "mikey179/vfsStream": "^1.6",
+        "mikey179/vfsstream": "^1.6",
         "phpunit/phpunit": "^6.5",
         "smarty/smarty": "^3.1",
         "kriswallsmith/assetic": "^1.4",
         "patchwork/jsqueeze": "^2.0",
         "ptachoire/cssembed": "^1.0",
-        "natxet/CssMin": "^3.0",
+        "natxet/cssmin": "^3.0",
         "twig/twig": "^2.5"
     },
     "scripts": {
