--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
     "require": {
         "php": ">=7.0",
         "ext-json": "*",
-        "psr/simple-cache": "^1.0"
+        "psr/simple-cache": "^1.0",
+        "dframe/config": "^4.0"
     },
     "suggest": {
         "smarty/smarty": "^3.1",
