--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,10 @@
         }
     ],
     "require": {
-        "php": ">=7.2",
+        "php": ">=7.3",
         "ext-json": "*",
-        "psr/simple-cache": "^1.0"
+        "psr/simple-cache": "^1.0",
+        "dframe/config": "^4.0"
     },
     "suggest": {
         "smarty/smarty": "^3.1",
@@ -45,7 +46,6 @@
         }
     },
     "require-dev": {
-        "mikey179/vfsstream": "^1.6",
         "phpunit/phpunit": "^8.3",
         "smarty/smarty": "^3.1",
         "kriswallsmith/assetic": "^1.4",
