--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,18 @@
         }
     ],
     "require": {
-        "php": ">=7.0",
+        "php": ">=7.3",
         "ext-json": "*",
         "psr/simple-cache": "^1.0"
+    },
+    "replace": {
+        "dframe/config": "self.version",
+        "dframe/cron": "self.version",
+        "dframe/loader": "self.version",
+        "dframe/router": "self.version",
+        "dframe/session": "self.version",
+        "dframe/token": "self.version",
+        "dframe/view": "self.version"
     },
     "suggest": {
         "smarty/smarty": "^3.1",
@@ -45,14 +54,14 @@
         }
     },
     "require-dev": {
-        "mikey179/vfsstream": "^1.6",
-        "phpunit/phpunit": "^6.5",
+        "phpunit/phpunit": "^8.3",
         "smarty/smarty": "^3.1",
         "kriswallsmith/assetic": "^1.4",
         "patchwork/jsqueeze": "^2.0",
         "ptachoire/cssembed": "^1.0",
         "natxet/cssmin": "^3.0",
-        "twig/twig": "^2.5"
+        "twig/twig": "^2.5",
+        "mikey179/vfsstream": "^1.6"
     },
     "scripts": {
         "test": [
