--- a/src/Loader/composer.json
+++ b/src/Loader/composer.json
@@ -31,7 +31,7 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.5",
+        "phpunit/phpunit": "^6.5"
     },
     "scripts": {
         "test": [
