--- a/src/View/composer.json
+++ b/src/View/composer.json
@@ -17,7 +17,8 @@
     "require": {
         "php": ">=7.3",
         "ext-json": "*",
-        "psr/simple-cache": "^1.0"
+        "psr/simple-cache": "^1.0",
+        "dframe/loader": "^v4.1"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
