Resolved #177 throw View Exception

--- a/src/View/composer.json
+++ b/src/View/composer.json
@@ -3,6 +3,7 @@
     "description": "View component Dframe",
     "keywords": [
         "php view",
+        "php templates",
         "dframe"
     ],
     "homepage": "https://dframeframework.com",
