--- a/composer.json
+++ b/composer.json
@@ -56,8 +56,7 @@
         "ptachoire/cssembed": "^1.0",
         "natxet/cssmin": "^3.0",
         "twig/twig": "^3.1",
-        "mikey179/vfsstream": "^1.6",
-        "dframe/dframe-demo": "^2.0"
+        "mikey179/vfsstream": "^1.6"
     },
     "scripts": {
         "test": [
