--- a/composer.json
+++ b/composer.json
@@ -54,8 +54,8 @@
         "kriswallsmith/assetic": "^1.4",
         "patchwork/jsqueeze": "^2.0",
         "ptachoire/cssembed": "^1.0",
-        "natxet/cssmin": "^3.0",
-        "twig/twig": "^3.1",
+        "natxetc/cssmin": "^3.0",
+        "twig/twig": "^3.3",
         "mikey179/vfsstream": "^1.6"
     },
     "scripts": {
