--- a/src/Loader/composer.json
+++ b/src/Loader/composer.json
@@ -27,7 +27,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Dframe\\Loader\\Tests\\": "tests"
+            "Dframe\\Loader\\Tests\\": "Tests"
         }
     },
     "require-dev": {
