--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,7 @@
     "require": {
         "php": ">=7.3",
         "ext-json": "*",
-        "psr/simple-cache": "^1.0",
-        "natxet/cssmin": "*"
+        "psr/simple-cache": "^1.0"
     },
     "replace": {
         "dframe/config": "self.version",
@@ -56,7 +55,8 @@
         "patchwork/jsqueeze": "^2.0",
         "ptachoire/cssembed": "^1.0",
         "twig/twig": "^3.3",
-        "mikey179/vfsstream": "^1.6"
+        "mikey179/vfsstream": "^1.6",
+        "natxet/cssmin": "^3.0"
     },
     "scripts": {
         "test": [
