--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "require": {
         "php": ">=8.1",
         "ext-json": "*",
-        "psr/simple-cache": "^1.0"
+        "psr/simple-cache": ">=1.0"
     },
     "replace": {
         "dframe/config": "self.version",
